--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </h1>
   <h1 class="footer-link"><a class="link" href="https://www.youtube.com/wesleym8" target="_blank">YOUTUBE</a>
 </h1>
-  <h1 class="footer-link"><a class="link" href="https://www.youtube.com/wesleym8" target="_blank">YOUTUBE</a>
+  <h1 class="footer-link"><a class="link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD</a>
 </h1>
   <script crossorigin="anonymous" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66615a3a8550361f8d178b18" type="text/javascript">
 </script>
