--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <body class="body">
     <section>
       <h1 class="heading">KORRINA.SHOP</h1>
-</section>
+    </section>
     <h1 class="footer-link">
       <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC</a>
+</section>
+    <h1 class="footer-link">
       <a class="link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a>
 </h1>
     <h1 class="footer-link">
