--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="heading">KORRINA.SHOP</h1>
     </section>
     <h1 class="footer-link">
-      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC</a>
+      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC</a><br>
 </section>
     <h1 class="footer-link">
       <a class="link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a>
