--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 </head>
   <body class="body">
     <section>
-      <h1 class="heading">KORRINA.SHOP</h1>
+      <h1 class="heading">KORRINA.SHOP
+      </h1>
     </section>
     <h1 class="footer-link">
-      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC</a><br>
+      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC
+      </a>
 </h1>
     <h1 class="footer-link">
-      <a class="link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a>
+      <a class="link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD
+      </a>
 </h1>
     <h1 class="footer-link">
       <a class="link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY</a>
