--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </h1>
     </section>
     <h1 class="footer-link">
-      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">"NEW MUSIC!!!!!"
+      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC
       </a>
 </h1>
     <h1 class="footer-link">
