--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a>
 </h1>
   <h1 class="footer-link">
-    <a class="link" href="https://www.youtube.com/wesleym8" target="_blank">YOUTUBE
+    <a class="link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE
     </a>
 </h1>
   <h1 class="footer-link">
