--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </a>
 </h1>
     <h1 class="footer-link">
-      <a class="link" href="https://korrina.bigcartel.com/products" target="_blank">MERCH
+      <a class="link" href="https://korrina.bigcartel.com/products" target="_blank">MERCH (coming soon)
       </a>
     </h1>
     <h1 class="footer-link">
