Change pay attention "new music" link to bandcamp link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </h1>
     </section>
     <h1 class="footer-link">
-      <a class="link" href="https://distrokid.com/hyperfollow/korrina/pay-attention" target="_blank">NEW MUSIC (4 JULY 2024)
+      <a class="link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP
       </a>
 </h1>
     <h1 class="footer-link">
