--- a/index.html
+++ b/index.html
@@ -1,40 +1,207 @@
+
 <!DOCTYPE html>
   <meta charset="utf-8"/>
   <title>KORRINA.SHOP</title>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <link href="https://cdn.prod.website-files.com/66615a3a8550361f8d178b18/css/yoo-f99aca.webflow.9f33c8886.css" rel="stylesheet" type="text/css"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
 </head>
-      <h1 class="heading">KORRINA.SHOP
+      <h1 class="heading" <span style=
+"
+color: red;
+margin-top: 0px;
+font-family:arial;
+font-size: 60px;
+ margin-bottom: 0px;
+outline: 3px red;
+
+"
+>KORRINA.SHOP
+
 
   <h1 class="footer-link">
-    <a class="link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE
+    <a class="link" href="https://www.youtube.com/@korrina"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_blank">YOUTUBE
     </a>
+
     <h1 class="footer-link">
-      <a class="link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP
-      </a>
-    <h1 class="footer-link">
-      <a class="link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD
-</h1>
-    <h1 class="footer-link">
-      <a class="link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY
-      </a>
-    </h1>
-    <h1 class="footer-link">
-  <a class="link" href="https://www.instagram.com/7korrina/" target="_blank">INSTAGRAM
-    <h1 class="footer-link">
-    <a class="link" href="https://x.com/EvilThighjob" target="_blank">TWITTER
+    <a class="link" href="https://korrina.bandcamp.com/"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_blank">BANDCAMP
     </a>
+
+
+
+
+    <h1 class="footer-link">
+    <a class="link" href="https://soundcloud.com/7korrina"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_blank">SOUNDCLOUD
+    </a>
+
+
+
+
+<h1 class="footer-link">
+    <a class="link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_blank">SPOTIFY
+    </a>
+
+
+
+
+
+
+<h1 class="footer-link">
+    <a class="link" href="https://www.instagram.com/7korrina/"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_blank">INSTAGRAM
+    </a>
+
+
+
+    <h1 class="footer-link">
+    <a class="link" href="https://x.com/EvilThighjob" 
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+
+target="_blank">TWITTER
+    </a>
+
+
+
+
+
 </h1>
   <h1 class="footer-link">
-    <a class="link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD
+    <a class="link" href="https://www.discord.gg/4kae" 
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+
+
+target="_blank">4KAE DISCORD
     </a>
+
+
+
+
 </script>
   <script src="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Stolen%20code.js" type="text/javascript"></script></body></html>
 <style type="text/css" id="custom-design-rules-style" data-design="{}">
     body {
-            background-position: center top;
+            background-position: top;
             background-repeat: repeat;
         background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
             background-attachment:fixed;
