--- a/404.html
+++ b/404.html
@@ -15,8 +15,34 @@ font-size: 60px;
 outline: 3px red;
 "
 >404 NOT FOUND
+ </a>
+    <h1 class="footer-link">
+    <a class="link" href="https://korrina.shop"
+<span style=
+"  
+opacity: 1;
+  outline-offset: 0px;
+  color: red;
+  mix-blend-mode: normal;
+  outline: 3px red;
+  margin-top: 40px;
+  margin-bottom: 6px;
+  font-size: 60px;
+  font-style: normal;
+  line-height: 16px;
+font-family:arial;
+  text-decoration: none;
+  display: block;
+color: rgb(255, 0, 0);
+"
+ target="_self">CLICK HERE TO GO BACK
 </script>
-  <script src="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Stolen%20code.js" type="text/javascript"></script></body></html>
+  <script 
+    src="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Stolen%20code.js" 
+type="text/javascript">
+</script>
+</body>
+</html>
 <style type="text/css" id="custom-design-rules-style" data-design="{}">
     body {
             background-position: top;
