--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@ outline: 3px red;
     <a class="link" href="https://korrina.shop"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -29,7 +29,7 @@ opacity: 1;
   margin-bottom: 6px;
   font-size: 60px;
   font-style: normal;
-  line-height: 16px;
+  line-height: 60px;
 font-family:arial;
   text-decoration: none;
   display: block;
