--- a/404.html
+++ b/404.html
@@ -21,18 +21,19 @@ outline: 3px red;
 <span style=
 "  
 opacity: .7;
+    margin:0;
+    padding:0;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
   outline: 3px red;
-  margin-top: 0px;
-  margin-bottom: 0px;
   font-size: 60px;
   font-style: normal;
   line-height: 60px;
 font-family:arial;
   text-decoration: none;
-  display: block;
+  display: inline;
+
 color: rgb(255, 0, 0);
 "
  target="_self">CLICK HERE TO GO BACK
