--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 color: red;
 margin-top: 0px;
 font-family:arial;
-font-size: 60px;
+font-size: 50px;
  margin-bottom: 0px;
 outline: 3px red;
 "
@@ -19,7 +19,7 @@ outline: 3px red;
     <a class="link" href="https://www.youtube.com/@korrina"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -40,7 +40,7 @@ color: rgb(255, 0, 0);
     <a class="link" href="https://korrina.bandcamp.com/"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -61,7 +61,7 @@ color: rgb(255, 0, 0);
     <a class="link" href="https://soundcloud.com/7korrina"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -82,7 +82,7 @@ color: rgb(255, 0, 0);
     <a class="link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -103,7 +103,7 @@ color: rgb(255, 0, 0);
     <a class="link" href="https://www.instagram.com/7korrina/"
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -124,7 +124,7 @@ color: rgb(255, 0, 0);
     <a class="link" href="https://x.com/EvilThighjob" 
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
@@ -146,7 +146,7 @@ target="_blank">TWITTER
     <a class="link" href="https://www.discord.gg/4kae" 
 <span style=
 "  
-opacity: 1;
+opacity: .7;
   outline-offset: 0px;
   color: red;
   mix-blend-mode: normal;
