--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <meta charset="utf-8"/>
   <title>KORRINA.SHOP</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <meta content="name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no""/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
 </head>
