--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
   <meta charset="utf-8"/>
   <title>KORRINA.SHOP</title>
-  <meta content="name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no""/>
+  <meta 
+name="viewport" 
+content="width=device-width, 
+initial-scale=1.0, 
+maximum-scale=1.0, 
+user-scalable=0"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
 </head>
@@ -163,11 +168,10 @@ color: rgb(255, 0, 0);
 "
 target="_blank">4KAE DISCORD
     </a>
-</script>
-  <script src="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Stolen%20code.js" type="text/javascript"></script></body></html>
+</body>
+</html>
 <style type="text/css" id="custom-design-rules-style" data-design="{}">
     body {
-            background-position: top;
             background-repeat: repeat;
         background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
             background-attachment:fixed;
