--- a/index.html
+++ b/index.html
@@ -1,178 +1,48 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="utf-8"/>
   <title>KORRINA.SHOP</title>
-  <meta 
-name="viewport" 
-content="width=device-width, 
-initial-scale=1.0, 
-maximum-scale=1.0, 
-user-scalable=0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
+  <style type="text/css">
+    body {
+      background-repeat: repeat;
+      background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
+      background-attachment: fixed;
+    }
+    .heading {
+      color: red;
+      margin-top: 0;
+      font-family: Arial, sans-serif;
+      font-size: 50px;
+      margin-bottom: 0;
+      outline: 3px red;
+    }
+    .footer-link {
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+      color: rgb(255, 0, 0);
+      text-decoration: none;
+      display: inline; /* Changed to inline */
+      opacity: .7;
+      outline-offset: 0px;
+      mix-blend-mode: normal;
+    }
+    h1.footer-link-container {
+      margin: 6px 0; /* Adjusted margin to reduce space */
+    }
+  </style>
 </head>
-      <h1 class="heading" <span style=
-"
-color: red;
-margin-top: 0px;
-font-family:arial;
-font-size: 50px;
- margin-bottom: 0px;
-outline: 3px red;
-"
->KORRINA.SHOP
-  <h1 class="footer-link">
-    <a class="link" href="https://www.youtube.com/@korrina"
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
- target="_blank">YOUTUBE
-    </a>
-    <h1 class="footer-link">
-    <a class="link" href="https://korrina.bandcamp.com/"
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
- target="_blank">BANDCAMP
-    </a>
-    <h1 class="footer-link">
-    <a class="link" href="https://soundcloud.com/7korrina"
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
- target="_blank">SOUNDCLOUD
-    </a>
-<h1 class="footer-link">
-    <a class="link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9"
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
- target="_blank">SPOTIFY
-    </a>
-<h1 class="footer-link">
-    <a class="link" href="https://www.instagram.com/7korrina/"
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
- target="_blank">INSTAGRAM
-    </a>
-    <h1 class="footer-link">
-    <a class="link" href="https://x.com/EvilThighjob" 
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
-target="_blank">TWITTER
-    </a>
-</h1>
-  <h1 class="footer-link">
-    <a class="link" href="https://www.discord.gg/4kae" 
-<span style=
-"  
-opacity: .7;
-  outline-offset: 0px;
-  color: red;
-  mix-blend-mode: normal;
-  outline: 3px red;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-size: 30px;
-  font-style: normal;
-  line-height: 16px;
-font-family:arial;
-  text-decoration: none;
-  display: block;
-color: rgb(255, 0, 0);
-"
-target="_blank">4KAE DISCORD
-    </a>
+<body>
+  <h1 class="heading">KORRINA.SHOP</h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">INSTAGRAM</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">TWITTER</a></h1>
+  <h1 class="footer-link-container"><a class="footer-link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD</a></h1>
 </body>
 </html>
-<style type="text/css" id="custom-design-rules-style" data-design="{}">
-    body {
-            background-repeat: repeat;
-        background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
-            background-attachment:fixed;
-    }
