--- a/index.html
+++ b/index.html
@@ -3,46 +3,61 @@
 <head>
   <meta charset="utf-8"/>
   <title>KORRINA.SHOP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
   <style type="text/css">
-    body {
+    html, body {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden; /* Disable scrolling */
       background-repeat: repeat;
       background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
       background-attachment: fixed;
+      font-family: Arial, sans-serif;
+      color: white;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; /* Align to the left */
+      padding-left: 40px; /* Add padding to the left for spacing */
+      padding-top: 20px; /* Add padding to the top for spacing */
     }
     .heading {
       color: red;
-      margin-top: 0;
-      font-family: Arial, sans-serif;
       font-size: 50px;
-      margin-bottom: 0;
-      outline: 3px red;
+      text-shadow: 2px 2px 4px #000000; /* Add a slight shadow for better readability */
+      margin: 20px 0;
     }
     .footer-link {
-      font-family: Arial, sans-serif;
       font-size: 30px;
       color: rgb(255, 0, 0);
       text-decoration: none;
-      display: inline; /* Changed to inline */
       opacity: .7;
-      outline-offset: 0px;
-      mix-blend-mode: normal;
+      transition: opacity 0.3s, transform 0.3s; /* Smooth transition for hover effects */
+    }
+    .footer-link:hover {
+      opacity: 1; /* Full opacity on hover */
+      transform: scale(1.1); /* Slightly enlarge the text on hover */
     }
     h1.footer-link-container {
-      margin: 6px 0; /* Adjusted margin to reduce space */
+      margin: 10px 0;
     }
   </style>
 </head>
 <body>
-  <h1 class="heading">KORRINA.SHOP</h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">INSTAGRAM</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">TWITTER</a></h1>
-  <h1 class="footer-link-container"><a class="footer-link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD</a></h1>
+  <div class="container">
+    <h1 class="heading">KORRINA.SHOP</h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">INSTAGRAM</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">TWITTER</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD</a></h1>
+  </div>
 </body>
 </html>
