--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
-  <style type="text/css">
+  <style>
     html, body {
       height: 100%;
       width: 100%;
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-repeat: repeat;
-      background-image: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg);
-      background-attachment: fixed;
+      background: url(https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg) repeat;
       font-family: Arial, sans-serif;
       color: white;
+      text-transform: uppercase;
     }
     .container {
       display: flex;
@@ -29,18 +28,17 @@
     .heading {
       color: red;
       font-size: 48px;
-      text-shadow: 1px 1px 3px #000000;
+      text-shadow: 1px 1px 3px #000;
       margin: 5px 0;
     }
     .footer-link {
       font-size: 28px;
-      color: rgb(255, 0, 0);
+      color: red;
       text-decoration: none;
-      opacity: .7;
+      opacity: 0.7;
       transition: opacity 0.3s, transform 0.3s;
       display: block;
       transform-origin: left center;
-      font-smoothing: antialiased;
     }
     .footer-link:hover {
       opacity: 1;
@@ -49,18 +47,24 @@
     .footer-link-container {
       margin: 2px 0;
     }
+    .footer-link-4kae {
+      color: white;
+      text-decoration: none;
+      background: none;
+      border: none;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1 class="heading">KORRINA.SHOP</h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">YOUTUBE</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">BANDCAMP</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">SOUNDCLOUD</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">SPOTIFY</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">INSTAGRAM</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">TWITTER</a></h1>
-    <h1 class="footer-link-container"><a class="footer-link" href="https://www.discord.gg/4kae" target="_blank">4KAE DISCORD</a></h1>
+    <h1 class="heading">korrina.shop</h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">youtube</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">soundcloud</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">spotify</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bandcamp.com/" target="_blank">bandcamp</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://www.instagram.com/7korrina/" target="_blank">instagram</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">twitter</a></h1>
+    <h1 class="footer-link-container"><a class="footer-link footer-link-4kae" href="https://www.discord.gg/4kae" target="_blank">4kae discord</a></h1>
   </div>
 </body>
 </html>
