--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,6 +39,7 @@
       transition: opacity 0.3s, transform 0.3s;
       display: block;
       transform-origin: left center;
+      text-shadow: 1px 1px 3px #000; /* Same shadow as the title */
     }
     .footer-link:hover {
       opacity: 1;
