--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
   <style>
+    /* General Styles */
     html, body {
       height: 100%;
       width: 100%;
@@ -18,12 +19,32 @@
       text-transform: uppercase;
       background-size: cover; /* Ensure the background image covers the entire viewport */
     }
+
+    /* Loading Screen Styles */
+    .loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      color: red;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 48px;
+      font-weight: bold;
+      z-index: 9999;
+    }
+
+    /* Main Content Styles */
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
       padding-top: 20px;
+      display: none; /* Hide main content initially */
     }
     .heading {
       color: red;
@@ -57,6 +78,10 @@
   </style>
 </head>
 <body>
+  <!-- Loading Screen -->
+  <div class="loading-screen" id="loadingScreen">LOADING</div>
+
+  <!-- Main Content -->
   <div class="container">
     <h1 class="heading">korrina.shop</h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">youtube</a></h1>
@@ -67,7 +92,47 @@
     <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">twitter</a></h1>
     <h1 class="footer-link-container"><a class="footer-link footer-link-4kae" href="https://www.discord.gg/4kae" target="_blank">4kae discord</a></h1>
   </div>
+
   <script>
+    const loadingScreen = document.getElementById('loadingScreen');
+    const container = document.querySelector('.container');
+    
+    // Variables for the loading animation
+    let dots = 0;
+    const maxDots = 3;
+    const loadingText = 'LOADING';
+    const updateInterval = 100; // in milliseconds for faster periods
+    const loadingTime = 1300; // Reduced loading time to 1.3 seconds
+    const doneFlashTime = 300; // Duration for the "DONE" flash
+
+    function updateLoadingText() {
+      // Create the loading text with the correct number of dots
+      let dotsText = '.'.repeat(dots);
+      loadingScreen.textContent = loadingText + dotsText;
+
+      // Update dots count
+      dots = (dots + 1) % (maxDots + 1); // Cycle dots from 0 to maxDots
+    }
+
+    function startLoadingScreen() {
+      // Update loading text every interval
+      const intervalId = setInterval(updateLoadingText, updateInterval);
+
+      // Flash "DONE" and then show main content after 1.3 seconds
+      setTimeout(() => {
+        clearInterval(intervalId); // Stop updating the loading text
+        loadingScreen.textContent = 'DONE';
+        setTimeout(() => {
+          loadingScreen.style.display = 'none';
+          container.style.display = 'flex';
+        }, doneFlashTime); // 0.3 seconds delay
+      }, loadingTime); // 1.3 seconds loading time
+    }
+
+    // Start the loading screen
+    startLoadingScreen();
+
+    // Randomize background image
     const images = [
       'https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg',
       'https://raw.githubusercontent.com/yKorrina/korrina.shop/main/pupp2400.jpg'
