--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
   <style>
-    /* General Styles */
     html, body {
       height: 100%;
       width: 100%;
@@ -17,10 +16,8 @@
       font-family: Arial, sans-serif;
       color: white;
       text-transform: uppercase;
-      background-size: cover; /* Ensure the background image covers the entire viewport */
+      background-size: cover;
     }
-
-    /* Loading Screen Styles */
     .loading-screen {
       position: fixed;
       top: 0;
@@ -32,19 +29,17 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 48px;
+      font-size: 36px;
       font-weight: bold;
       z-index: 9999;
     }
-
-    /* Main Content Styles */
     .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
       padding-top: 20px;
-      display: none; /* Hide main content initially */
+      display: none;
     }
     .heading {
       color: red;
@@ -60,7 +55,7 @@
       transition: opacity 0.3s, transform 0.3s;
       display: block;
       transform-origin: left center;
-      text-shadow: 1px 1px 3px #000; /* Same shadow as the title */
+      text-shadow: 1px 1px 3px #000;
     }
     .footer-link:hover {
       opacity: 1;
@@ -78,10 +73,7 @@
   </style>
 </head>
 <body>
-  <!-- Loading Screen -->
   <div class="loading-screen" id="loadingScreen">LOADING</div>
-
-  <!-- Main Content -->
   <div class="container">
     <h1 class="heading">korrina.shop</h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">youtube</a></h1>
@@ -97,42 +89,33 @@
     const loadingScreen = document.getElementById('loadingScreen');
     const container = document.querySelector('.container');
     
-    // Variables for the loading animation
     let dots = 0;
     const maxDots = 3;
     const loadingText = 'LOADING';
-    const updateInterval = 100; // in milliseconds for faster periods
-    const loadingTime = 1300; // Reduced loading time to 1.3 seconds
-    const doneFlashTime = 300; // Duration for the "DONE" flash
+    const updateInterval = 100;
+    const loadingTime = 1300;
+    const doneFlashTime = 300;
 
     function updateLoadingText() {
-      // Create the loading text with the correct number of dots
       let dotsText = '.'.repeat(dots);
       loadingScreen.textContent = loadingText + dotsText;
-
-      // Update dots count
-      dots = (dots + 1) % (maxDots + 1); // Cycle dots from 0 to maxDots
+      dots = (dots + 1) % (maxDots + 1);
     }
 
     function startLoadingScreen() {
-      // Update loading text every interval
       const intervalId = setInterval(updateLoadingText, updateInterval);
-
-      // Flash "DONE" and then show main content after 1.3 seconds
       setTimeout(() => {
-        clearInterval(intervalId); // Stop updating the loading text
+        clearInterval(intervalId);
         loadingScreen.textContent = 'DONE';
         setTimeout(() => {
           loadingScreen.style.display = 'none';
           container.style.display = 'flex';
-        }, doneFlashTime); // 0.3 seconds delay
-      }, loadingTime); // 1.3 seconds loading time
+        }, doneFlashTime);
+      }, loadingTime);
     }
 
-    // Start the loading screen
     startLoadingScreen();
 
-    // Randomize background image
     const images = [
       'https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg',
       'https://raw.githubusercontent.com/yKorrina/korrina.shop/main/pupp2400.jpg'
@@ -144,7 +127,6 @@
 
     function setBackground() {
       const imageUrl = getRandomImage();
-      console.log('Background Image URL:', imageUrl); // Debugging line
       document.body.style.background = `url(${imageUrl}) repeat`;
     }
 
