--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     html, body {
       height: 100%; width: 100%; margin: 0; padding: 0; overflow: hidden;
       font-family: Arial, sans-serif; color: white; text-transform: uppercase;
-      background-size: cover;
+      background-size: auto;
+      background-repeat: repeat;
+      background-color: black;
+      transition: background-color 0.5s ease-in-out, background-image 0.5s ease-in-out;
     }
     .loading-screen {
       position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -19,7 +22,10 @@
     }
     .container {
       display: flex; flex-direction: column; align-items: center;
-      text-align: center; padding-top: 20px; display: none;
+      text-align: center; padding-top: 20px; opacity: 0; transition: opacity 0.5s ease-in-out;
+    }
+    .container.visible {
+      opacity: 1;
     }
     .heading {
       color: red; font-size: 48px; text-shadow: 1px 1px 3px #000; margin: 5px 0;
@@ -38,7 +44,7 @@
 </head>
 <body>
   <div class="loading-screen" id="loadingScreen">LOADING</div>
-  <div class="container">
+  <div class="container" id="mainContent">
     <h1 class="heading">korrina.shop</h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina" target="_blank">youtube</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">soundcloud</a></h1>
@@ -50,11 +56,12 @@
   </div>
   <script>
     const loadingScreen = document.getElementById('loadingScreen');
-    const container = document.querySelector('.container');
+    const container = document.getElementById('mainContent');
     let dots = 0;
     const updateInterval = 100;
     const loadingTime = 1200;
     const doneFlashTime = 300;
+    const fadeDuration = 500;
 
     function updateLoadingText() {
       loadingScreen.textContent = 'LOADING' + '.'.repeat(dots);
@@ -67,8 +74,13 @@
         clearInterval(intervalId);
         loadingScreen.textContent = 'DONE';
         setTimeout(() => {
-          loadingScreen.style.display = 'none';
-          container.style.display = 'flex';
+          loadingScreen.style.opacity = 0;
+          document.body.style.backgroundImage = `url(${getRandomImage()})`;
+          container.classList.add('visible');
+          document.body.style.backgroundColor = '';
+          setTimeout(() => {
+            loadingScreen.style.display = 'none';
+          }, fadeDuration);
         }, doneFlashTime);
       }, loadingTime);
     }
@@ -82,12 +94,6 @@
       ];
       return images[Math.floor(Math.random() * images.length)];
     }
-
-    function setBackground() {
-      document.body.style.background = `url(${getRandomImage()}) repeat`;
-    }
-
-    window.onload = setBackground;
   </script>
 </body>
 </html>
