--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+    <meta property="og:title" content="KORRINA.SHOP" />
+    <meta property="og:description" content="I LOVE YOU" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" />
+    <meta property="og:url" content="https://korrina.shop" />
+    <meta property="og:type" content="website" />
+    <!-- Optional tags -->
+    <meta property="og:site_name" content="" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="400" />
   <title>KORRINA.SHOP</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
