--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     }
     .footer-link-container { margin: 2px 0; }
     .footer-link-4kae { color: white; text-decoration: none; background: none; border: none; }
+    .clickable-area {
+      position: absolute; top: 500px; left: 100px; width: 200px; height: 200px;
+      z-index: 1000; /* Make sure it's above the background image */
+      cursor: pointer; /* Change cursor to pointer to indicate clickable area */
+    }
   </style>
 </head>
 <body>
@@ -62,6 +67,7 @@
     <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">twitter</a></h1>
     <h1 class="footer-link-container"><a class="footer-link footer-link-4kae" href="https://www.discord.gg/4kae" target="_blank">4kae discord</a></h1>
   </div>
+  <div class="clickable-area" onclick="window.open('https://example.com', '_blank');"></div>
   <script>
     const loadingScreen = document.getElementById('loadingScreen');
     const container = document.getElementById('mainContent');
