--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1 class="footer-link-container"><a class="footer-link" href="https://x.com/EvilThighjob" target="_blank">twitter</a></h1>
     <h1 class="footer-link-container"><a class="footer-link footer-link-4kae" href="https://www.discord.gg/4kae" target="_blank">4kae discord</a></h1>
   </div>
-  <div class="clickable-area" onclick="window.location.href='SECRET.html';"></div>
+  <div class="clickable-area" onclick="window.location.href='secret';"></div>
   <script>
     const loadingScreen = document.getElementById('loadingScreen');
     const container = document.getElementById('mainContent');
