--- a/secret.html
+++ b/secret.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Play Video in Tab</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/H3i.ico" rel="shortcut icon" type="image/x-icon"/>
+  <link href="https://raw.githubusercontent.com/yKorrina/korrina.shop/main/Pupp400.jpg" rel="apple-touch-icon"/>
+  <title>secret video</title>
   <style>
     body {
       margin: 0;
