--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="loading-screen" id="loadingScreen">LOADING</div>
   <div class="container" id="mainContent">
     <h1 class="heading">korrina.shop</h1>
-   <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bigcartel.com/products" target="_blank" style="color: 00FF00;">merch</a></h1>
+   <h1 class="footer-link-container"><a class="footer-link" href="https://korrina.bigcartel.com/products" target="_blank" style="color: #00FF00;">merch</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://www.youtube.com/@korrina?sub_confirmation=1" target="_blank">youtube</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://soundcloud.com/7korrina" target="_blank">soundcloud</a></h1>
     <h1 class="footer-link-container"><a class="footer-link" href="https://open.spotify.com/artist/7bXQZYDuarsTQkM4Yzw2Y9" target="_blank">spotify</a></h1>
