--- a/img.html
+++ b/img.html
@@ -31,12 +31,11 @@
 
         .image-container img {
             height: 400px;
-            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+            transition: transform 0.3s ease-in-out;
         }
 
         .image-container img:hover {
             transform: scale(1.02);
-            opacity: 0.9;
         }
     </style>
 </head>
